--- a/react-front-end/src/styles/App.scss
+++ b/react-front-end/src/styles/App.scss
@@ -1,8 +1,8 @@
 @import './abstracts/variables';
 @import './components/button';
 @import './layout/_navbar';
+@import './layout/tables';
 @import './components/meetups';
-@import './components/forecast';
 @import './components/loginUser';
 @import './components/_safetySend';
 @import './components/_userLogin';
