--- a/react-front-end/src/styles/layout/_containers.scss
+++ b/react-front-end/src/styles/layout/_containers.scss
@@ -6,10 +6,17 @@
   border: 1px solid #0e3147;
   padding: 30px;
   border-radius: 5px;
-  &-meetups {
-    display: flex;
-    justify-content:space-evenly;
+  &-allmeets {
+    width: 30%;
+    margin:10px
   }
+}
+.mpanel {
+  display: flex;
+  flex-direction: column;
+  margin: 15px;
+  justify-content:space-evenly;
+  width: 600px
 }
 
 .meetups {
@@ -18,5 +25,17 @@
   &-hidden {
     display: flex;
     visibility: hidden;
+  }
 }
+
+.cont {
+  display: flex;
+  flex-direction: row;
+  justify-content:center;
+  max-width: 1200px;
+  margin: auto;
+  overflow: auto;
+  // border: 1px solid #0e3147;
+  padding: 30px;
+  border-radius: 5px;
 }
