reconfigure delete button

--- a/react-front-end/src/styles/components/_button.scss
+++ b/react-front-end/src/styles/components/_button.scss
@@ -25,9 +25,9 @@
   width: 100%;
 }
 
-.btn {
+.btn-danger {
   display: inline-block;
-  background: #000;
+  background: red;
   color: #fff;
   border: none;
   padding: 10px 20px;
@@ -37,17 +37,4 @@
   text-decoration: none;
   font-size: 15px;
   font-family: inherit;
-}
-
-.btn:focus {
-  outline: none;
-}
-
-.btn:active {
-  transform: scale(0.98);
-}
-
-.btn-block {
-  display: block;
-  width: 100%;
 }
