import npm pkg and adjust colors on landing page

--- a/react-front-end/src/styles/App.scss
+++ b/react-front-end/src/styles/App.scss
@@ -21,6 +21,10 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+.landing-page {
+  height: 1vh;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
