--- a/react-front-end/src/styles/layout/_navbar.scss
+++ b/react-front-end/src/styles/layout/_navbar.scss
@@ -41,7 +41,7 @@
 }
 
 .fa-bars {
-  color: rgb(247, 199, 199);
+  color: #fff;
 }
 
 .menu-icon {
@@ -79,7 +79,7 @@
     width: 100%;
     display: table;
     &:hover {
-      background-color: #93e593;
+      background-color: #0e3147;
       border-radius: 0;
     };
     &-mobile {
