Add final commit

--- a/react-front-end/src/components/Map/Map.css
+++ b/react-front-end/src/components/Map/Map.css
@@ -4,7 +4,7 @@
   height: 100px;
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  /* background: rgba(255, 255, 255, 0.8); */
+  background: rgba(255, 255, 255, 0.8);
 }
 
 .leaflet-control-layers-toggle {
