--- a/react-front-end/src/styles/abstracts/_variables.scss
+++ b/react-front-end/src/styles/abstracts/_variables.scss
@@ -7,3 +7,11 @@ $lilac: #5177c0;
 $steel-blue: #5177c0;
 $teal: #59b9ca;
 $dark-teal: #0e3147;
+
+
+// 55BCCD
+// 60AEBF
+// 5abbcc
+// logo: 6dc8d9 or fff
+// links: 061d29 or fff
+// hover links 092a3c
