--- a/react-front-end/src/styles/layout/_forms.scss
+++ b/react-front-end/src/styles/layout/_forms.scss
@@ -32,3 +32,14 @@
   flex: 2;
   height: 20px;
 }
+
+.map-form {
+  width: 20%;
+  padding: 20px;
+  padding-top: 30px;
+  // background-color: $teal;
+  // color: white;
+}
+// .map-form-text {
+//   padding-top: 30px;
+// }
