--- a/react-front-end/src/styles/components/_meetups.scss
+++ b/react-front-end/src/styles/components/_meetups.scss
@@ -1,3 +1,13 @@
 .attendees {
   color: red;
 }
+
+.mpanel-outer {
+  display: flex;
+  display: row;
+}
+
+.mpanel-chat {
+  display: flex;
+  margin: 5px;
+}
