--- a/react-front-end/src/styles/components/_button.scss
+++ b/react-front-end/src/styles/components/_button.scss
@@ -1,6 +1,8 @@
+@import '../abstracts/variables';
+
 .btn {
   display: inline-block;
-  background: #000;
+  background: $dark-teal;
   color: #fff;
   border: none;
   padding: 10px 20px;
@@ -27,7 +29,7 @@
 
 .btn-danger {
   display: inline-block;
-  background: red;
+  background: #5177c0;
   color: #fff;
   border: none;
   padding: 10px 20px;
