adjust styling for forms and text color across all pages

--- a/react-front-end/src/styles/components/_button.scss
+++ b/react-front-end/src/styles/components/_button.scss
@@ -29,7 +29,7 @@
 
 .btn-danger {
   display: inline-block;
-  background: #5177c0;
+  background: #5abbcc;
   color: #fff;
   border: none;
   padding: 10px 20px;
