--- a/react-front-end/src/styles/layout/_containers.scss
+++ b/react-front-end/src/styles/layout/_containers.scss
@@ -39,11 +39,19 @@
     @include item;
     align-self: center;
     background-color: #092a3c;
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.10),
+     0px 10px 20px rgba(0,0,0,0.05),
+     0px 20px 20px rgba(0,0,0,0.05),
+     0px 30px 20px rgba(0,0,0,0.05);
   }  
   &-2, &-3 {
     @include item;
     align-self: center;
     background-color: #5abbcc;
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.10),
+     0px 10px 20px rgba(0,0,0,0.05),
+     0px 20px 20px rgba(0,0,0,0.05),
+     0px 30px 20px rgba(0,0,0,0.05);
   }  
 }  
 
