--- a/react-front-end/src/styles/App.scss
+++ b/react-front-end/src/styles/App.scss
@@ -53,7 +53,7 @@ footer {
 
 .leaflet-container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 // .App {
@@ -85,4 +85,16 @@ footer {
 .example {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+}
+
+.footer {
+  background-color: #092a3c;
+    textAlign: center;
+    padding: 20px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    height: 60px;
+    width: 100%;
+    color: #f8f9fa;
 }
