--- a/react-front-end/src/Components/Vegetable/VegetableAbout.scss
+++ b/react-front-end/src/Components/Vegetable/VegetableAbout.scss
@@ -1,5 +1,7 @@
-.mainCard {
+.content {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
   margin: 20px;
   margin-top: 100px;
@@ -8,8 +10,8 @@
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flipCard {
   background-color: transparent;
-  width: 300px;
-  height: 200px;
+  width: 400px;
+  height: 300px;
   border: 1px solid #f1f1f1;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
@@ -30,12 +32,18 @@
 }
 
 /* Position the front and back side */
-.flipCardFront, .flipCardBack {
+.flipCardFront,
+.flipCardBack {
   position: absolute;
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 /* Style the front side (fallback if image is missing) */
@@ -49,4 +57,6 @@
   background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
+  padding: 20px;
+  font-size: 18px;
 }
