--- a/react-front-end/src/index.css
+++ b/react-front-end/src/index.css
@@ -1,4 +1,7 @@
 body {
+  /* background-color: #0d0005;
+  background-image: url(http://www.transparenttextures.com/patterns/fabric-of-squares.png); */
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
