--- a/react-front-end/src/index.css
+++ b/react-front-end/src/index.css
@@ -1,4 +1,8 @@
 body {
+  background-color: lightblue;
+  /* background-color: #0d0005; */
+  /* background-image: url("https://www.transparenttextures.com/patterns/scribble-light.png"); */
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
   /* background-color: #0d0005;
   background-image: url(http://www.transparenttextures.com/patterns/fabric-of-squares.png); */
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
