--- a/react-front-end/src/Components/Weather/Weather.scss
+++ b/react-front-end/src/Components/Weather/Weather.scss
@@ -18,9 +18,9 @@
   justify-content: center;
 }
 .alert-heat {
-  background-color: #ffd38d;
-  border: 1px solid #ffbe56;
-  color: rgb(255, 255, 255);
+  background-color: #fff6e8;
+  // border: 1px solid #ffbe56;
+  color: #a7844d;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
   padding: 10px 36px;
@@ -33,9 +33,9 @@
   }
 }
 .alert-frost {
-  background-color: #77b6ff;
-  border: 1px solid #3b96ff;
-  color: rgb(255, 255, 255);
+  background-color: #e5f1ff;
+  // border: 1px solid #d6e9ff;
+  color: #5b93d3;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
   padding: 10px 36px;
@@ -48,9 +48,9 @@
   }
 }
 .alert-rain {
-  background-color: #9aff81;
-  border: 1px solid #68ff4e;
-  color: rgb(255, 255, 255);
+  background-color: #ebffed;
+  // border: 1px solid #68ff4e;
+  color: #297432;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
   padding: 10px 36px;
