updated db and vegCard, added difficulty peppers

--- a/react-front-end/src/Components/Dropdown.scss
+++ b/react-front-end/src/Components/Dropdown.scss
@@ -1,8 +1,8 @@
 .main {
   width: 100%;
   max-width: 360px;
-  background-color: #aff08f;
-  color: white;
+  background-color: #0c1408;
+  color: #277500;
   font-weight: bold;
   height: 100%;
 }
@@ -10,11 +10,8 @@
   padding-left: 20px;
 }
 .icon {
-  color: white;
+  color: #216200;
 }
 .a {
   font-weight: bold;
-  :hover {
-    color: hotpink;
-  }
 }
