updated planting table

--- a/react-front-end/src/Components/Vegetable/VegetableAbout.scss
+++ b/react-front-end/src/Components/Vegetable/VegetableAbout.scss
@@ -54,7 +54,7 @@
 
 /* Style the back side */
 .flipCardBack {
-  background-color: dodgerblue;
+  background-color: rgb(38, 56, 36);
   color: white;
   transform: rotateY(180deg);
   padding: 20px;
