removed unnecesssary imports

--- a/react-front-end/src/component/Messenger/Compose/Compose.css
+++ b/react-front-end/src/component/Messenger/Compose/Compose.css
@@ -5,7 +5,7 @@
   background: white;
   border-top: 1px solid #eeeef1;
   position: fixed;
-  width: calc(100% - 20px);
+  width: 80.6%;
   bottom: 0px;
 }
 
