--- a/react-front-end/src/index.css
+++ b/react-front-end/src/index.css
@@ -2,7 +2,7 @@ body {
   /* background-color: #0d0005;
   background-image: url(http://www.transparenttextures.com/patterns/tileable-wood.png); */
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
-  background-color: #053548;
+  background-color: #2b2c3b;
   /* background-color: #0d0005; */
   /* background-image: url("https://www.transparenttextures.com/patterns/scribble-light.png"); */
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
