--- a/react-front-end/src/index.css
+++ b/react-front-end/src/index.css
@@ -12,3 +12,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.navbar-segment {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
+
+.navbar-logo {
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
+
+}
