add profile page, and create Profile, NotFound and PlantList components

--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -31,3 +31,17 @@
     transform: rotate(360deg);
   }
 }
+
+main.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+  margin: auto;
+}
+
+div.plants {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
