--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -35,7 +35,8 @@
 main.container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
+  column-gap: 5%;
   width: 90%;
   margin: auto;
 }
