--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -89,5 +89,6 @@ div.ui.inverted.segment.navbar-segment {
   position: fixed;
   width: 100%;
   height: 80px;
-  z-index: 1;
+  opacity: 95%;
+  z-index: 100;
 }
