--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -61,13 +61,6 @@ main.plant-container {
   margin: auto;
 }
 
-div.icons {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 30%;
-}
-
 i.rain.icon, i.book.icon, i.sun.icon, i.paw.icon, i.world.icon, i.lab.icon {
   font-size: 20px;
 }
@@ -77,13 +70,6 @@ img.plant-photo {
   border-radius: 5%;
 }
 
-div.plant-desc {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 50%;
-}
-
 div.ui.inverted.segment.navbar-segment {
   top: 0;
   position: fixed;
@@ -91,4 +77,17 @@ div.ui.inverted.segment.navbar-segment {
   height: 80px;
   opacity: 95%;
   z-index: 100;
+}
+
+div.plant-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+}
+
+img.plant-photo {
+  margin-left: 5%;
+  width: 90%;
+  height: auto;
 }
