Setup Wishlist Component

--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -83,7 +83,7 @@ div.plant-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
+  margin-right: 5%;
 }
 
 img.plant-photo {
