Add happy cactus and default styling to userplant card

--- a/react-front-end/src/components/Dashboard/styles.css
+++ b/react-front-end/src/components/Dashboard/styles.css
@@ -1,3 +1,12 @@
 .drop{
   max-height: 105px !important;
 }
+
+.default-view {
+  padding-top: 140px;
+  padding-bottom: 140px;
+}
+
+.bee-default {
+  padding-bottom: 280px;
+}
