Implement Add to Wishlist button on view Plant page (from Profile)

--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -126,3 +126,9 @@ div.ui.container.app-container {
   width: 97%;
   margin: auto;
 }
+
+div.ui.video {
+  position: fixed;
+  width: 35%;
+  height: auto;
+}
