--- a/react-front-end/src/components/Dashboard/styles.css
+++ b/react-front-end/src/components/Dashboard/styles.css
@@ -57,3 +57,18 @@
 div.header.room-header {
   height: 5px;
 }
+
+div.notifications {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  row-gap: 5px;
+}
+
+h3.ui.header.dash-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
